# Softdesk-support

./: LICENSE  README.md  pyproject.toml  softdest-support.postman_collection.json
softdesk/: db.sqlite3  pyproject.toml
softdesk/issues/: models.py  permissions.py  serializers.py  urls.py  views.py
softdesk/issues/migrations/: 0001_initial.py  0002_comment_uuid.py
softdesk/projects/: models.py  permissions.py  serializers.py  urls.py  views.py
softdesk/projects/migrations/: 0001_initial.py
softdesk/softdesk/: settings.py  urls.py
softdesk/users/: models.py  permissions.py  serializers.py  urls.py  views.py
softdesk/users/migrations/: 0001_initial.py
