[project]
name = "softdesk"
version = "0.1.0"
description = "API RESTful for SoftDesk project management"
authors = [
    {name = "devogs",email = "billy.bob@devogs.xyz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
